--- a/lego_translations_zh-CN.xlf
+++ b/lego_translations_zh-CN.xlf
@@ -36,7 +36,7 @@
       </trans-unit>
       <trans-unit id="8" extradata="AccountBalanceForm.balanceUntilLastSaturdayButton">
         <source>Pay</source>
-        <target />
+        <target />`
       </trans-unit>
       <trans-unit id="9" extradata="AccountBalanceForm.balanceUntilNextSaturday.Item0">
         <source>Balance to</source>
